--- a/content/index.html
+++ b/content/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>作业</title>
 	</head>
-	<body background="201905555532周亚芳/img/538d40f1ddee8.jpg" 01905555532周亚芳/img/568f0c0e0da73.jpg" >
+	<body background="img/538d40f1ddee8.jpg">
 		<h1 align="center" >作业目录</h1>
 		<p><a href="201905555532周亚芳/index.html">第一次作业之十句话</a></p>
 		<p><a href="sign up/index.html">第二次作业之高考报名表</a></p>
