--- a/content/index.html
+++ b/content/index.html
@@ -6,8 +6,8 @@
 	</head>
 	<body background="img/538d40f1ddee8.jpg">
 		<h1 align="center" >作业目录</h1>
-		<p><a href="201905555532周亚芳/index.html">第一次作业之十句话</a></p>
-		<p><a href="sign up/index.html">第二次作业之高考报名表</a></p>
+		<p><a href="https://zyf431025200010036440.github.io/201905555532周亚芳/">第一次作业之十句话</a></p>
+		<p><a href="https://zyf431025200010036440.github.io/sign up/">第二次作业之高考报名表</a></p>
 	
 	</body>
 </html>
