--- a/content/index.html
+++ b/content/index.html
@@ -6,8 +6,8 @@
 	</head>
 	<body background="img/538d40f1ddee8.jpg">
 		<h1 align="center" >作业目录</h1>
-		<a href="https://zyf431025200010036440.github.io/201905555532周亚芳/">第一次作业之十句话</a>
-		<a href="https://zyf431025200010036440.github.io/sign up/">第二次作业之高考报名表</a>
-	
+		<a href="https://zyf431025200010036440.github.io/201905555532%E5%91%A8%E4%BA%9A%E8%8A%B3/">第一次作业之十句话</a>
+		<br />
+		<a href="https://zyf431025200010036440.github.io/sign%20up/">第二次作业之高考报名表</a>
 	</body>
 </html>
