--- a/content/index.html
+++ b/content/index.html
@@ -9,5 +9,6 @@
 		<a href="https://zyf431025200010036440.github.io/201905555532%E5%91%A8%E4%BA%9A%E8%8A%B3/">第一次作业之十句话</a>
 		<br />
 		<a href="https://zyf431025200010036440.github.io/sign%20up/">第二次作业之高考报名表</a>
+		<a href="https://zyf431025200010036440.github.io/军训/index.html">第三次作业之我的军训生活</a>
 	</body>
 </html>
