--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<h1 align="center" >作业目录</h1>
 		<p><a href="201905555532周亚芳/index.html">第一次作业之十句话</a></p>
 		<p><a href="sign up/index.html">第二次作业之高考报名表</a></p>
+	        <p><a href="https://zyf431025200010036440.github.io/军训/index.html">第三次作业之我的军训生活</a></p>
 	
 	</body>
 </html>
