--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 	</head>
 	<body background="201905555532周亚芳/img/538d40f1ddee8.jpg" 01905555532周亚芳/img/568f0c0e0da73.jpg" >
 		<h1 align="center" >作业目录</h1>
-		<p><a href="201905555532周亚芳/index.html">第一次作业之十句话</a></p>
-		<p><a href="sign up/index.html">第二次作业之高考报名表</a></p>
-	        <p><a href="https://zyf431025200010036440.github.io/军训/index.html">第三次作业之我的军训生活</a><p>
-	 <p><a href="https://zyf431025200010036440.github.io/chenzhou/">第四次作业之我的家乡</a><p>
+		<p  align="center"><a href="201905555532周亚芳/index.html">第一次作业之十句话</a></p>
+		<p  align="center"><a href="sign up/index.html">第二次作业之高考报名表</a></p>
+	        <p  align="center"><a href="https://zyf431025200010036440.github.io/军训/index.html">第三次作业之我的军训生活</a><p>
+	 <p  align="center"><a href="https://zyf431025200010036440.github.io/chenzhou/">第四次作业之我的家乡</a><p>
 								       <br/>
 								       <br/>
 								       <br/>
+										       <br/>
+										       <<br/>
+										       <br/>
 								      	<marquee style="color: #A52A2A; font: '楷体';font-size: -webkit-xxx-large;"> 周亚芳  网络工程一班  201905555532 
 								      	</marquee>
 										  
