--- a/chenzhou/index.html
+++ b/chenzhou/index.html
@@ -176,7 +176,7 @@
         		<img src="img/0b7b02087bf40ad10b1a488f562c11dfa8eccee4.jpg" width="500px" height="480px" />
         	<img src="img/timg (2).jpg" width="500px" />
         	<img src="img/wKgBZ1nIzPWAFPLhAA5OXDHJRr055.jpeg" width="500px" />
-        	<h4 style="color: ghostwhite;" align="center">是不是很好看很鲜呢
+        	<h4 style="color: #808080;" align="center">是不是很好看很鲜呢
         	<br/>
         	如果感兴趣的话就来玩吧
         	<br />
@@ -193,7 +193,7 @@
         		<img src="img/wKgBEFsdMK2AXG-mAAXiQOOEIzY44.jpeg" width="500px"/>
         		<img src="img/wKgED1vJ3leAVMqYAEn8GBNfp5A42.jpeg"width="500px" />
         		<img src="img/wKgED1vJ3liAWSADAEsfUpS_CIg87.jpeg" width="500px" />
-        		<h3 align="center" style="color: lavender;">一定看呆了吧，这可是我新发现的拍照好地方，hhh</h3>
+        		<h3 align="center" style="color: #808080;">一定看呆了吧，这可是我新发现的拍照好地方，hhh</h3>
         	</div>
         	<div class="suxian">
         		<h3 style="color: #808080;" align="center">郴州一个很火的地方<ins>苏仙岭</ins>，我没去过几次，但是现在山上很好看，弄了一个打卡神地</h3>
@@ -202,7 +202,7 @@
         		<img src="img/QQ图片20191012182550.jpg" width="500px" />
         		<img src="img/QQ图片20191012182556.jpg" width="500px" />
         		<img src="img/QQ图片20191012182553.jpg" width="500px" height="400px" />
-        		<h3 align="center" style="color: lavender;">是不是很好看呢
+        		<h3 align="center" style="color: #808080;">是不是很好看呢
         		<br />
         		我也觉得，哈哈哈
         		</h3>
@@ -210,6 +210,9 @@
             <br />
                <br />
                <br />
+		<br/>
+		<br/>
+		<br/>
                <h1 style="color: #808080;" align="left">还有很多好看好玩的我就不一一推荐了
                <br />这里献上几张北湖公园的图
                </h2>
