--- a/chenzhou/index.html
+++ b/chenzhou/index.html
@@ -242,7 +242,7 @@
         		</marquee>
        	</div>
        	<br />
-       	<video width="1000" height="600" controls="controls" al>
+       	<video width="1000" height="600" controls="controls" al   align="center">
        		<source src="video/QQ视频20191012213112(1).mp4"></source>
        	</video>
         </div>
