--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>作业</title>
+		
 	</head>
-	<body background="201905555532周亚芳/img/538d40f1ddee8.jpg" 01905555532周亚芳/img/568f0c0e0da73.jpg" >
+	<body background="军训/img/QQ图片20191107090130.jpg" 01905555532周亚芳/img/568f0c0e0da73.jpg" >
 		<h1 align="center" >作业目录</h1>
 		<p  align="center"  style="font-size: xx-large;"><a href="201905555532周亚芳/index.html">第一次作业之十句话</a></p>
 		<p  align="center"  style="font-size: xx-large;"><a href="sign up/index.html">第二次作业之高考报名表</a></p>
 	        <p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/军训/index.html">第三次作业之我的军训生活</a><p>
 	        <p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/chenzhou/">第四次作业之我的家乡</a><p>
 		<p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/daohang/">第五次作业之网站模仿</a></p>
+		<p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/homework6/">第六次作业</a></p>
 								       <br/>
 														     
 								       <br/>
