--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/daohang/">第五次作业之网站模仿</a></p>
 		<p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/homework6/">第六次作业</a></p>
                 <p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/homework7/">第七次作业</a></p>
+	        <p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/homework8/">第八次作业</a></p>												     
 								       <br/>
 														     
 								       <br/>
