--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>作业</title>
 		
 	</head>
-	<body background="军训/img/QQ图片20191107090130.jpg" 01905555532周亚芳/img/568f0c0e0da73.jpg" >
+	<body background="军训/img/QQ图片20191107090130.jpg" 01905555532周亚芳/img/568f0c0e0da73.jpg" style=" background-repeat:no-repeat ;background-size:100% 100%; background-attachment:fixed;"  >
 		<h1 align="center" >作业目录</h1>
 		<p  align="center"  style="font-size: xx-large;"><a href="201905555532周亚芳/index.html">第一次作业之十句话</a></p>
 		<p  align="center"  style="font-size: xx-large;"><a href="sign up/index.html">第二次作业之高考报名表</a></p>
@@ -14,7 +14,9 @@
 		<p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/daohang/">第五次作业之网站模仿</a></p>
 		<p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/homework6/">第六次作业</a></p>
                 <p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/homework7/">第七次作业</a></p>
-	        <p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/homework8/">第八次作业</a></p>												     
+	        <p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/homework8/">第八次作业</a></p>
+		<p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/homework9/">第九次作业</a></p>
+		<p  align="center"  style="font-size: xx-large;"><a href="https://zyf431025200010036440.github.io/homework 10/">第十次作业</a></p>	
 								       <br/>
 														     
 								       <br/>
